--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "css-loader": "^3.2.0",
     "dotenv": "^8.0.0",
     "dotenv-webpack": "^1.7.0",
+    "eslint-utils": "^1.4.2",
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "file-loader": "^4.2.0",
